--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-management",
   "version": "1.0.0",
-  "description": "A boilerplate from html template",
+  "description": "Projet de gamification du recrutement",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
