--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "nodemailer-pug-engine": "^2.0.1",
-    "react-ga": "^3.3.1"
+    "universal-analytics": "^0.5.3"
   }
 }
